# photojournalism

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  feeds.txt
src/: lib.rs  loader.rs  main.rs  parser.rs  parser_test.rs  server.rs  server_test.rs  shuffler.rs
static/: index.html
static/js/: loader.js
tests/: shuffler_test.rs
tests/fixtures/: aeon.xml  bbc.xml  japantimes.xml  npr.xml  nytimes.xml  quanta.xml
