[package]
name = "photojournalism"
version = "0.1.0"
edition = "2021"
authors = ["Denis Papathanasiou <denis@papathanasiou.org>"]
license = "MIT"

[dependencies]
rss = "2.0"
scraper = "0.18.1"
reqwest = "0.11.22"
reqwest-middleware = "0.2.4"
http-cache-reqwest = "0.12.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = { version = "4", features = ["openssl"] }
actix-files = "0.6.2"
openssl = { version = "0.10" }
log = "0.4.0"
env_logger = "0.9.0"
rand = "0.8.5"